# pydynamodbpackage

./: README.md  pyproject.toml
src/pydynamodb/: dynamodbstorable.py  dynamodbutility.py
src/pydynamodb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
