[project]
name = "pydynamodb"
version = "0.0.1"
authors = [
  { name="Ranvir Prasad", email="ranvir.prasad@gmail.com" },
]
description = "Pythonic interface for dynamodb built over boto3"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ranvirp/pydynamodb"
Issues = "https://github.com/ranvirp/pydynamodb/issues"